Lesson2_15 (create maven) without JSon